# taiji

./: .gitignore  .license.ignore  Cargo.lock_bad  Cargo.toml  Cross.toml  README.md  SECURITY.md  changelog-development.md  changelog-nextnet.md  changelog-stagenet.md  package-lock.json
.github/workflows/: base_node_binaries.json  base_node_binaries.yml  build_dockers.yml  build_dockers_workflow.yml  build_libffis.yml  build_libwallets.yml  build_libwallets_workflow.yml  ci.yml  integration_tests.yml
applications/minotaiji_app_grpc/: Cargo.toml
applications/minotaiji_merge_mining_proxy/: Cargo.toml
applications/minotaiji_miner/: Cargo.toml
applications/minotaiji_node/: Cargo.toml  README.md  build.rs
base_layer/chat_ffi/: Cargo.toml  build.rs  chat.h
base_layer/chat_ffi/src/: callback_handler.rs  error.rs  lib.rs
base_layer/common_types/: Cargo.toml
base_layer/contacts/: Cargo.toml  build.rs
base_layer/core/: Cargo.toml
base_layer/key_manager/: Cargo.toml
base_layer/mmr/: Cargo.toml
base_layer/p2p/: Cargo.toml
base_layer/service_framework/: Cargo.toml
base_layer/taiji_mining_helper_ffi/: Cargo.toml
base_layer/wallet/: Cargo.toml  build.rs
base_layer/wallet_ffi/: Cargo.toml
buildtools/: multinet_envs.sh
buildtools/docker/: start.sh
common/: Cargo.toml
common/taiji_features/: Cargo.toml
common_sqlite/: Cargo.toml
comms/core/: Cargo.toml
comms/dht/: Cargo.toml
comms/rpc_macros/: Cargo.toml
docs/src/: SUMMARY.md  branching_releases.md
infrastructure/derive/: Cargo.toml
integration_tests/: Cargo.toml
(+421 files in other folders)
