[package]
name = "taiji_chat_ffi"
authors = ["The Taiji Development Community"]
description = "Taiji cryptocurrency chat C FFI bindings"
license = "BSD-3-Clause"
version = "0.52.0-pre.1"
edition = "2018"

[dependencies]
minotaiji_app_utilities = { path = "../../applications/minotaiji_app_utilities" }
taiji_chat_client = { path = "../contacts/examples/chat_client" }
taiji_common = { path = "../../common" }
taiji_common_types = { path = "../common_types" }
taiji_comms = { path = "../../comms/core" }
taiji_contacts = { path = "../contacts" }
taiji_shutdown = { path = "../../infrastructure/shutdown" }

libc = "0.2.65"
libsqlite3-sys = { version = "0.25.1", features = ["bundled"], optional = true }
log = "0.4.6"
log4rs = { git = "https://github.com/tari-project/log4rs.git", features = ["console_appender", "file_appender", "yaml_format"] }
thiserror = "1.0.26"
tokio = "1.23"

[target.'cfg(target_os="android")'.dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }

[lib]
crate-type = ["staticlib","cdylib"]

[build-dependencies]
cbindgen = "0.24.3"
taiji_common = { path = "../../common", features = ["build", "static-application-info"] }

[features]
default = ["bundled_sqlite"]
c_integration = []
bundled_sqlite = ["libsqlite3-sys"]

[package.metadata.cargo-machete]
ignored = ["libsqlite3-sys"] # this is so we can run cargo machete without getting false positive about macro dependancies
